--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
     </properties>
 
     <dependencies>
+
+        <!-- ___________________ SPRING ______________________ -->
+        <!-- Le core de Spring contenant l'essentiel -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
@@ -25,6 +28,13 @@
         </dependency>
 
         <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-webmvc</artifactId>
+          <version>${spring.version}</version>
+        </dependency>
+        <!-- ___________________ !SPRING ______________________ -->
+
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.5</version>
@@ -36,13 +46,6 @@
             <version>2.1</version>
             <scope>provided</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-
 
         <dependency>
           <groupId>javax.servlet</groupId>
