--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,14 @@
         </dependency>
         <!-- ___________________ !SPRING ______________________ -->
 
+        <!-- Tomcat 8 -->
+        <!-- <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>servlet-api</artifactId>
+          <version>3.1</version>
+        </dependency>-->
+
+        <!-- Tomcat 7 -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
